chore: added luckperms integration.